--- a/src/style/common.css
+++ b/src/style/common.css
@@ -8,3 +8,21 @@ body{
   width:100%;
   height:100%;
 }
+
+@media (min-width: 768px) {
+  .container {
+    width:750px
+  }
+}
+
+@media (min-width: 992px) {
+  .container {
+    width:970px
+  }
+}
+
+@media (min-width: 1200px) {
+  .container {
+    width:1170px
+  }
+}
