--- a/src/style/common.css
+++ b/src/style/common.css
@@ -26,3 +26,12 @@ body{
     width:1170px
   }
 }
+
+.popMenu{
+  margin-top: 2px !important;
+  width: 100%;
+  padding: 0;
+  left: 0 !important;
+  border: 0;
+  height: 40px;
+}
