--- a/src/style/common.css
+++ b/src/style/common.css
@@ -35,3 +35,13 @@ body{
   border: 0;
   height: 40px;
 }
+
+
+
+.el-dialog__header{
+  padding: 20px 20px 0;
+}
+
+.el-dialog__body{
+  padding: 15px 20px 0;
+}
