--- a/src/style/common.css
+++ b/src/style/common.css
@@ -95,3 +95,45 @@ nput::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
   /* Internet Explorer 10+ */   
   color: rgb(253, 250, 250);  
  }
+
+ .checklist-mb-wrapper .el-input-number--mini {
+  width: 90px;
+  height: 22px;
+  line-height: 22px;
+}
+.checklist-mb-wrapper  .el-input-number__decrease {
+  width: 21px;
+  font-size: 12px;
+  height: 20px;
+}
+
+.checklist-mb-wrapper .el-input-number__increase{
+  width: 21px;
+  font-size: 12px;
+  height: 20px;
+}
+
+.checklist-mb-wrapper .el-input__inner{
+  height: 22px;
+  line-height: 22px;
+  padding:0 26px;
+}
+
+.weui-cells_checkbox .weui-check:checked + .weui-icon-checked:before {
+  content: '\EA06';
+  color: #D7B25A !important;
+}
+
+.weui-cells_checkbox .weui-check:checked + .vux-checklist-icon-checked:before {
+  color: #D7B25A !important;
+}
+
+.vux-check-icon > .weui-icon-success:before, .vux-check-icon > .weui-icon-success-circle:before{
+  font-size: 20px;
+  color: #D7B25A !important;
+}
+
+.weui-icon-success{
+  font-size: 20px;
+  color: #D7B25A !important;
+}
