--- a/src/style/common.css
+++ b/src/style/common.css
@@ -58,6 +58,7 @@ body{
 .login-wrapper input{
   background-color: transparent;
   color: white;
+  height: 100%;
 }
 
 .login-wrapper .el-input-group__prepend{
@@ -79,21 +80,21 @@ body{
   flex: 0.3 !important;
 }
 
-nput::-webkit-input-placeholder, textarea::-webkit-input-placeholder {   
-  /* WebKit browsers */   
- color: rgb(253, 250, 250);   
- }   
- input:-moz-placeholder, textarea:-moz-placeholder {   
- /* Mozilla Firefox 4 to 18 */   
- color: rgb(253, 250, 250);  
- }   
- input::-moz-placeholder, textarea::-moz-placeholder {   
-  /* Mozilla Firefox 19+ */   
-  color: rgb(253, 250, 250);   
- }   
- input:-ms-input-placeholder, textarea:-ms-input-placeholder {   
-  /* Internet Explorer 10+ */   
-  color: rgb(253, 250, 250);  
+nput::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
+  /* WebKit browsers */
+ color: rgb(253, 250, 250);
+ }
+ input:-moz-placeholder, textarea:-moz-placeholder {
+ /* Mozilla Firefox 4 to 18 */
+ color: rgb(253, 250, 250);
+ }
+ input::-moz-placeholder, textarea::-moz-placeholder {
+  /* Mozilla Firefox 19+ */
+  color: rgb(253, 250, 250);
+ }
+ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
+  /* Internet Explorer 10+ */
+  color: rgb(253, 250, 250);
  }
 
  .checklist-mb-wrapper .el-input-number--mini {
