增加移动端代码

--- a/src/style/common.css
+++ b/src/style/common.css
@@ -159,3 +159,7 @@ nput::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
 .mint-indexlist-nav{
   display: none;
 }
+
+.weui-search-bar{
+  padding: 8px 8px !important;
+}
