增加移动端代码

--- a/src/style/common.css
+++ b/src/style/common.css
@@ -139,7 +139,7 @@ nput::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
   color: #D7B25A !important;
 }
 
-.el-badge__content {
+.menu-wrapper .el-badge__content {
   background-color: #D7B25A;
   border-radius: 90px;
   color: #fff;
@@ -162,4 +162,8 @@ nput::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
 
 .weui-search-bar{
   padding: 8px 8px !important;
+}
+
+.detail-mb-wrapper .el-badge__content.is-fixed{
+  top: 13px;
 }
